Fix still-collapsed menu in previously-narrow screen

--- a/crux/src/components/Menu/Menu.module.css
+++ b/crux/src/components/Menu/Menu.module.css
@@ -12,6 +12,8 @@
 }
 
 .menuContainer {
+  flex-grow: 1;
+  justify-content: flex-end;
   margin-left: 48px;
   overflow: hidden;
 }
